--- a/src/main/resources/templates/addRecipe.html
+++ b/src/main/resources/templates/addRecipe.html
@@ -14,17 +14,11 @@
                     <td><label th:for="${#ids.next('name')}">Назва:</label></td>
                     <td><input type="text" th:field="*{name}"
                                placeholder="Введіть назву страви"/></td>
-                    <td><span class="validationError"
-                              th:if="${#fields.hasErrors('name')}"
-                              th:errors="*{name}">Recipe Name Error</span></td>
                 </tr>
                 <tr>
                     <td><label th:for="${#ids.next('portionsNumber')}">Кількість порцій:</label></td>
                     <td><input type="number" th:field="*{portionsNumber}" value="1" min="1" max="25"
                                placeholder="Введіть число порцій"/></td>
-                    <td><span class="validationError"
-                              th:if="${#fields.hasErrors('portionsNumber')}"
-                              th:errors="*{portionsNumber}">Portions Number Error</span></td>
                 </tr>
             </table>
             <section id="ingredients-block">
@@ -39,46 +33,24 @@
                 </div>
 
                 <table id="ingredients-table">
-                    <tr th:each="ingred, itr : *{ingredients}">
-                        <td>
-                            <input type="hidden" th:field="*{ingredients[__${itr.index}__].ingredient.id}">
-                        </td>
-                        <td th:text="${ingred.ingredient.name}"
-                            class="ing-name-cell">Інгредієнт</td>
-                        <td>
-                            <input th:field="*{ingredients[__${itr.index}__].quantity}"
-                                   class="number-input" type="text" size="6" maxlength="6" placeholder="Кількість"
-                                   pattern=" *(?:[1-9]\d*|(?:0|[1-9]\d*)[\.,]\d) *">
-                        </td>
-                        <td>
-                            <select class="ing-measure-select"
-                                    th:field="*{ingredients[__${itr.index}__].measureId}">
-                                <option th:each="meas : ${ingred.ingredient.type.measures}"
-                                        th:text="${meas.title}" th:value="${meas.id}">кг</option>
-                            </select>
-                        </td>
-                        <td>
-                            <input th:field="*{ingredients[__${itr.index}__].note}"
-                                   type="text" placeholder="Примітка" maxlength="20">
-                        </td>
-                        <td>
-                            <button type="button" class="remove-ingredient-btn" tabindex="-1">❌</button>
-                        </td>
-                    </tr>
+                    <tbody></tbody>
                 </table>
             </section>
             <section>
                 <h3>Етапи приготування</h3>
-                <table id="stages-table">
-                    <tr th:each="stage, itr : *{stages}">
-                        <td>
-                            <textarea class="stage-input-area" th:field="*{stages[__${itr.index}__]}"
-                                    placeholder="Введіть вказівки з приготування"></textarea>
-                        </td>
-                        <td>
-                            <button type="button" class="remove-stage-btn" tabindex="-1">❌</button>
-                        </td>
-                    </tr>
+                <table id="stage-table">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <textarea class="stage-input-area" id="stages0" name="stages[0]"
+                                          placeholder="Введіть вказівки з приготування"></textarea>
+                            </td>
+                            <td>
+                                <button type="button" class="remove-stage-btn" tabindex="-1"
+                                        onclick="removeStage(this)">❌</button>
+                            </td>
+                        </tr>
+                    </tbody>
                 </table>
                 <button type="button" id="add-stage-btn">Додати етап</button>
             </section>
