--- a/src/main/resources/templates/addRecipe.html
+++ b/src/main/resources/templates/addRecipe.html
@@ -32,9 +32,7 @@
                 </div>
                 <p class="warn-msg">Додайте принаймні один інгредієнт</p>
 
-                <table id="ingredients-table">
-                    <tbody></tbody>
-                </table>
+                <ul id="ingredients-list"></ul>
             </section>
             <section id="stages-section">
                 <h3>Етапи приготування</h3>
