Recipe editing added

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<head xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <meta charset="UTF-8">
     <title>Recipes Home</title>
 </head>
 <body>
-<a th:href="@{/recipes/add}"><h3>Add a new recipe</h3></a>
+    <nav>
+        <a th:href="@{/recipes}"><h3>Переглянути список рецептів</h3></a>
+        <a th:href="@{/recipes/add}"><h3>Додати рецепт</h3></a>
+    </nav>
 </body>
 </html>
