--- a/src/main/resources/static/styles/recipe-form.css
+++ b/src/main/resources/static/styles/recipe-form.css
@@ -8,8 +8,11 @@
 }
 
 * {
-    font-size: 100%;
+    font-size: 101%;
     font-family: 'Fira Sans Condensed', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 input[type="search"]::-webkit-search-decoration,
@@ -29,6 +32,7 @@ h1, h2, h3, h4 {
 
 h1 {
     font-size: 2.2em;
+    margin: 25px 0;
 }
 
 h2 {
@@ -39,13 +43,8 @@ h3 {
     font-size: 1.2em;
 }
 
-body {
-    margin: 0;
-}
-
 .remove-ingredient-btn, .remove-stage-btn {
     background-color: transparent;
-    padding: 0;
     border-style: none;
 }
 
@@ -53,19 +52,67 @@ body {
     cursor: pointer;
 }
 
+textarea {
+    padding: 3px 5px;
+}
+
+input[type="text"], input[type="search"], input[type="number"],  select {
+    padding: 0 5px;
+}
+
 main {
-    min-width: 640px;
-    max-width: 864px;
+    min-width: 785px;
+    max-width: 785px;
     background-color: white;
     box-shadow: 0 0 5px #727272;
     margin: auto;
-    padding: 20px;
+    padding: 30px;
+}
+
+section {
+    padding-bottom: 20px;
+}
+
+section h3 {
+    margin-bottom: 15px;
+}
+
+#main-info-section label {
+    font-weight: bold;
+}
+
+#main-info-wrapper {
+    width: 420px;
+}
+
+#main-info-wrapper div:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+#main-info-wrapper div {
+    display: flex;
+}
+
+#main-info-wrapper label {
+    width: 40%;
+}
+
+#main-info-wrapper input {
+    width: 60%;
+}
+
+#description-field {
+    resize: vertical;
+    height: 6em;
+    width: 100%;
+    min-height: 4em;
+    max-height: 10em;
 }
 
 .dropdown {
     position: relative;
     height: 1.5em;
-    width: 200px;
+    width: 250px;
 }
 
 #ingredient-search {
@@ -88,8 +135,6 @@ main {
 }
 
 .dropdown-results-list {
-    margin: 0;
-    padding: 0;
     list-style-type: none;
 }
 
@@ -105,7 +150,7 @@ main {
 
 #ingredients-list {
     margin: 20px;
-    padding: 0;
+    display: none;
 }
 
 #ingredients-list li {
@@ -116,7 +161,7 @@ main {
     height: 2.5em;
 }
 
-#ingredients-list li div {
+#ingredients-list li div:not(:last-child) {
     padding-right: 10px;
 }
 
@@ -136,10 +181,30 @@ main {
     width: 5.5em;
 }
 
+#stages-list {
+    list-style: none;
+}
+
+#stages-list li {
+    display: inline-flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+#stages-list li div:not(:last-child) {
+    padding-right: 10px;
+}
+
 .stage-input-area {
-    resize: none;
+    resize: vertical;
     height: 6em;
     width: 30em;
+    min-height: 4em;
+    max-height: 10em;
+}
+
+#add-stage-btn {
+    padding: 3px 10px;
 }
 
 #tags-block {
@@ -151,6 +216,10 @@ main {
 
 .tag-wrapper {
     width: 12em;
+}
+
+input[type="submit"] {
+    padding: 3px 10px;
 }
 
 @keyframes blinking {
@@ -166,6 +235,7 @@ main {
 }
 
 .warn-msg {
+    margin: 5px 0;
     color: #dc0e37;
     display: none;
 }
